--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.4.0",
       "@types/node": "^16.11.10",
+      "ts-node": "10.4.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.4",
-      "reflect-metadata": "^0.1.13",
-      "mysql": "^2.14.1",
+      "body-parser": "^1.19.1",
       "express": "^4.17.2",
-      "body-parser": "^1.19.1"
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.2.44",
+      "typeorm-pagination": "^2.0.3"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
    }
 }
